# frame-sampling

./: Dockerfile  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: docker-publish.yml
notebooks/: custom_criteria_sampling.ipynb  frame_sampling_demo.ipynb  video_clip_sampling.ipynb
src/frame_sampling/: __init__.py  __main__.py  dataset.py  strategy.py
tests/: __init__.py  test_main.py
