[tool.poetry]
name = "frame-sampling"
version = "0.0.0"
description = "Python library devoted to various frame sampling strategies."
authors = ["Diogenes Analytics <diogenesanalytics@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DiogenesAnalytics/frame-sampling"
repository = "https://github.com/DiogenesAnalytics/frame-sampling"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/DiogenesAnalytics/frame-sampling/releases"

[tool.poetry.dependencies]
python = "^3.9"
av = ">=11.0.0"
click = ">=8.0.1"
pillow = ">=10.1.0"
tqdm = ">=4.66.1"
ffmpeg-progress-yield = ">=0.7.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
myst-parser = {version = ">=0.16.1"}
nox = ">=2023.4.22"
nox-poetry = ">=1.0.3"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
typeguard = ">=2.13.3"
types-pillow = ">=10.1.0.2"
types-tqdm = ">=4.66.0.4"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}

[tool.poetry.scripts]
frame-sampling = "frame_sampling.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["frame_sampling", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["av.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
